--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Test websocket</title>
+    <title>5 en raya IP gold edition</title>
     <link rel="stylesheet" href="menu.css">
 
 </head>
