--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 
 <head>
 
-    <title>5 en raya IP gold edition</title>
+    <title>Test websocket</title>
     <link rel="stylesheet" href="menu.css">
 
 </head>
 
 <body>
   <div id = "Content">
+    <p id = "Tittle">->5 en raya IP gold edition<-</p>
     <div id ="padding">
       <button id = "connect" class = "button">Create game</button>
       <p></p>
